--- a/compose/normandy-base.yml
+++ b/compose/normandy-base.yml
@@ -3,6 +3,8 @@ version: '2'
 services:
   normandy-base:
     image: mozilla/normandy:latest
+    volumes:
+        - /Users/victorng/dev/normandy/recipe-server:/app
     environment:
       PYTHONDONTWRITEBYTECODE: 1
       DATABASE_URL: "postgres://postgres@database/postgres"
